--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,6 +1,13 @@
 // Here you can add other styles
-.modal-customer {    
-    max-width: auto;
-    height: 766px;
+.modal-header {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 0.5rem;
+    border-bottom: 1px solid #e4e7ea;
+    border-top-left-radius: 0.3rem;
+    border-top-right-radius: 0.3rem;
 }
-
