--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -9939,9 +9939,17 @@ body {
 .app-header .navbar-nav .dropdown-menu-right {
   right: auto; }
 
-.modal-customer {
-  max-width: auto;
-  height: 766px; }
+.modal-header {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 0.5rem;
+  border-bottom: 1px solid #e4e7ea;
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem; }
 
 html body .app.flex-row.align-items-center {
   height: 100vh; }
